# rust-parsing-scratchpad

./: Cargo.toml  README.md  input.txt
.github/workflows/: rust-clippy.yml  rust.yml
src/: calc.l  calc.y  grammar.pest  lib.rs  main.rs  parsers.rs
src/parsers/: combine.rs  nom.rs  pest.rs  regex.rs  split.rs  yacc.rs
